--- a/app/src/main/res/layout/item_list_episode.xml
+++ b/app/src/main/res/layout/item_list_episode.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="episode"
-            type="com.platzi.android.rickandmorty.api.EpisodeServer" />
+            type="com.platzi.android.rickandmorty.domain.Entities.Episode" />
     </data>
 
     <LinearLayout
